[project]
name = "rest-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[project.scripts]
rbox = "rest_sandbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
