[project]
name = "rest-sandbox"
version = "0.1.0"
description = "A RESTful Web Services interactive shell"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[project.scripts]
rest-box = "rest_sandbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "pudb>=2024.1.3",
    "pytest>=8.3.5",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.11.0",
]
